--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong 
             class="titulo-destaque">com um Front-end de qualidade!
             </strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou o professor-rafael, desenvolvedor
+            <p class="apresentacao__conteudo__texto">Olá! Sou a mycaeli, desenvolvedor
             Front-end com especialidade em, HTML e
             CSS. Ajudo pequenos trabalhos a
             colocarem em prática boas ideias.</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Contatos</h2>
-                <a class="apresentacao__links__link" href="https://github.com/professor-rafael">
+                <a class="apresentacao__links__link" href="https://github.com/mycaeli">
                     <img src="github.png">
                     Github
                 </a>
-                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/rafael-assis-santos-3384b220a/">
+                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/mycaeli-3384b220a/">
                     <img src="linkedin.png">
                     linkedin
                 </a>
@@ -66,10 +66,10 @@
                 </a>
             </div>
         </section>
-        <img src="ras.png" height="50%" width="50%" alt="Foto do professor-rafael programando">
+        <img src="unnamed.png" height="50%" width="50%" alt="Foto da mycaeli programando">
     </main>
     <footer class="rodape">
-        <p>Estilizado por professor-rafael</p>
+        <p>Estilizado por mycaeli</p>
     </footer>
 </body>
 
